# eeg-shenanigans

./: .env.example  .gitignore  LICENSE  README.md  _cortex.py  generate_audio_clip.py  generate_clips.py  generate_visual_clip.py  inference.py  pyproject.toml  run.sh  test.py  train.ipynb  train_dreamer.ipynb  train_focus.ipynb  train_stew.ipynb
client/: index.html  package-lock.json  package.json
client/src/: style.css
webserver/: _cortex.py  _helpers.py  _inference.py  _models.py  cogload.txt  inference.py  lsl.py  lsl_read.py  lsl_stream.py  main.py  main_old.py  scaler.pkl
webserver/datasets/: focused.npy  unfocused.npy
webserver/static/css/: cogload_calibration.css  focus.css  focus_calibration.css  style.css
webserver/static/js/: cogload.js  cogload_calibration.js  focus.js  focus_callibration.js
webserver/templates/: cogload.html  cogload_calibration.html  focus.html  focus_calibration.html  focus_callibration.html  main.html
